--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,5 +3,14 @@
 @tailwind utilities;
 
 html {
+  height: 100%;
   font-size: 62.5%;
+  overflow-x: hidden;
+}
+body, #root {
+  height: 100%;
+}
+
+input {
+  outline: 0;
 }
